src/main/jkube/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    jkube.io/scm-url: https://https://github.com/shravanatirtha/car-rental-system/zoho-project/rentberry
    jkube.io/issue-system: Redmine
    jkube.io/issue-tracker-url: https://redmine.fic.udc.es/project/rentberry/issues
    jkube.io/scm-tag: head
  labels:
    app: rentberry
    provider: jkube
    version: 0.0.1-SNAPSHOT
    group: shravanatirtha
  name: rentberry
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rentberry
      provider: jkube
      group: shravanatirtha
  template:
    metadata:
      annotations:
        jkube.io/scm-url: https://https://github.com/shravanatirtha/car-rental-system/zoho-project/rentberry
        jkube.io/issue-system: Redmine
        jkube.io/issue-tracker-url: https://redmine.fic.udc.es/project/rentberry/issues
        jkube.io/scm-tag: head
      labels:
        app: rentberry
        provider: jkube
        version: 0.0.1-SNAPSHOT
        group: shravanatirtha
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: HOSTNAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        image: https://github.com/shravanatirtha/car-rental-system:5050/zoho-project/rentberry:latest
        imagePullPolicy: Always
        name: deploy-rentberry
        securityContext:
          privileged: false
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: car-rental-system
